Update: logo-based color palette and design refinements

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Experience unforgettable wildlife and jungle adventures in Rurrenabaque, Bolivia with Jaja Tours. Expert guides, sustainable tourism.">
     <meta name="keywords" content="jungle tours, wildlife tours, Rurrenabaque, Bolivia, Amazon adventures">
+    <meta property="og:title" content="Jaja Tours | Premium Wildlife & Jungle Adventures">
+    <meta property="og:description" content="Experience unforgettable wildlife and jungle adventures in Rurrenabaque, Bolivia with Jaja Tours. Expert guides, sustainable tourism.">
+    <meta property="og:image" content="Images/Hero image.webp">
+    <meta property="og:url" content="https://jajatours.com">
+    <meta name="twitter:card" content="summary_large_image">
     <title>Jaja Tours | Premium Wildlife & Jungle Adventures</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="Images/447973524_122114860244321359_951190063293816690_n.jpg" type="image/jpg">
+    <style>html { scroll-behavior: smooth; }</style>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" aria-label="Main Navigation">
         <div class="nav-container">
             <img src="Images/447973524_122114860244321359_951190063293816690_n.jpg" alt="Jaja Tours Logo" class="nav-logo">
             <ul class="nav-links">
@@ -22,7 +28,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <div class="hamburger">
+            <div class="hamburger" aria-label="Open navigation menu" tabindex="0">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -113,22 +119,22 @@
                 <h2>Gallery</h2>
                 <p class="section-subtitle">Capturing the beauty of the Amazon</p>
                 <div class="gallery-grid">
-                    <img src="Images/Accommodation.webp" alt="Accommodation">
-                    <img src="Images/ant.jpg" alt="Ant">
-                    <img src="Images/boat view.jpg" alt="Boat View">
-                    <img src="Images/butterfly.jpg" alt="Butterfly">
-                    <img src="Images/crocodile close up.jpg" alt="Crocodile Close Up">
-                    <img src="Images/grasshopper.jpg" alt="Grasshopper">
-                    <img src="Images/Kingfisher.jpg" alt="Kingfisher">
-                    <img src="Images/monkey 2.jpg" alt="Monkey 2">
-                    <img src="Images/monkey.jpg" alt="Monkey">
-                    <img src="Images/Pampas boat.jpg" alt="Pampas Boat">
-                    <img src="Images/parrots kissing .jpg" alt="Parrots Kissing">
-                    <img src="Images/paw prints.jpg" alt="Paw Prints">
-                    <img src="Images/red flower.jpg" alt="Red Flower">
-                    <img src="Images/spider.jpg" alt="Spider">
-                    <img src="Images/tarantula.jpg" alt="Tarantula">
-                    <img src="Images/Toucan .webp" alt="Toucan">
+                    <img src="Images/Accommodation.webp" alt="Accommodation room in the jungle" loading="lazy" width="400" height="200">
+                    <img src="Images/ant.jpg" alt="Amazon ant close up" loading="lazy" width="400" height="200">
+                    <img src="Images/boat view.jpg" alt="Boat view of the jungle" loading="lazy" width="400" height="200">
+                    <img src="Images/butterfly.jpg" alt="Butterfly in the Amazon" loading="lazy" width="400" height="200">
+                    <img src="Images/crocodile close up.jpg" alt="Crocodile close up" loading="lazy" width="400" height="200">
+                    <img src="Images/grasshopper.jpg" alt="Grasshopper in the jungle" loading="lazy" width="400" height="200">
+                    <img src="Images/Kingfisher.jpg" alt="Kingfisher bird" loading="lazy" width="400" height="200">
+                    <img src="Images/monkey 2.jpg" alt="Monkey in the trees" loading="lazy" width="400" height="200">
+                    <img src="Images/monkey.jpg" alt="Monkey face close up" loading="lazy" width="400" height="200">
+                    <img src="Images/Pampas boat.jpg" alt="Pampas boat tour" loading="lazy" width="400" height="200">
+                    <img src="Images/parrots kissing .jpg" alt="Parrots kissing" loading="lazy" width="400" height="200">
+                    <img src="Images/paw prints.jpg" alt="Animal paw prints" loading="lazy" width="400" height="200">
+                    <img src="Images/red flower.jpg" alt="Red flower in the jungle" loading="lazy" width="400" height="200">
+                    <img src="Images/spider.jpg" alt="Amazon spider" loading="lazy" width="400" height="200">
+                    <img src="Images/tarantula.jpg" alt="Tarantula in the Amazon" loading="lazy" width="400" height="200">
+                    <img src="Images/Toucan .webp" alt="Toucan bird" loading="lazy" width="400" height="200">
                 </div>
             </div>
         </section>
@@ -180,32 +186,33 @@
         <section id="contact">
             <div class="container">
                 <h2>Contact Us</h2>
-                <div class="contact-content">
+                <div class="contact-content enhanced-contact">
                     <div class="contact-info">
                         <h3>Get in Touch</h3>
                         <p>Ready to embark on your Amazon adventure? Contact us today to plan your perfect trip.</p>
                         <div class="contact-details">
                             <p><strong>Location:</strong> Rurrenabaque, Bolivia</p>
                             <p><strong>Email:</strong> <a href="mailto:info@jajatours.com">info@jajatours.com</a></p>
-                            <p><strong>Phone:</strong> +591 123 456 789</p>
+                            <p><strong>Phone:</strong> <a href="tel:+591123456789">+591 123 456 789</a></p>
                         </div>
                         <div class="social-media">
                             <h4>Follow Us</h4>
                             <div class="social-buttons">
-                                <a href="#" class="social-btn facebook">Facebook</a>
-                                <a href="#" class="social-btn instagram">Instagram</a>
+                                <a href="#" class="social-btn facebook" aria-label="Facebook">Facebook</a>
+                                <a href="#" class="social-btn instagram" aria-label="Instagram">Instagram</a>
                             </div>
                         </div>
                     </div>
                     <div class="map-section">
                         <h3>Find Us</h3>
                         <div class="map-container">
-                            <iframe src="https://www.google.com/maps?q=HF5C+H32,+Rurrenabaque&output=embed" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps?q=HF5C+H32,+Rurrenabaque&output=embed" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" title="Jaja Tours Location"></iframe>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <button id="backToTop" aria-label="Back to top">↑</button>
     </main>
     <footer>
         <div class="container">
@@ -228,14 +235,32 @@
                     <div class="social-links">
                         <a href="#" title="Instagram">Instagram</a>
                         <a href="#" title="Facebook">Facebook</a>
-                        <a href="#" title="Twitter">Twitter</a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Jaja Tours, Rurrenabaque, Bolivia. All rights reserved.</p>
+                <p>&copy; 2025 Jaja Tours, Rurrenabaque, Bolivia. Contact: +59164111560. All rights reserved.</p>
             </div>
         </div>
     </footer>
+    <script>
+    // Hamburger menu functionality
+    const hamburger = document.querySelector('.hamburger');
+    const navLinks = document.querySelector('.nav-links');
+    hamburger.addEventListener('click', () => {
+        navLinks.classList.toggle('active');
+    });
+    hamburger.addEventListener('keypress', (e) => {
+        if (e.key === 'Enter') navLinks.classList.toggle('active');
+    });
+    // Back to Top button
+    const backToTop = document.getElementById('backToTop');
+    window.addEventListener('scroll', () => {
+        backToTop.style.display = window.scrollY > 300 ? 'block' : 'none';
+    });
+    backToTop.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+    </script>
 </body>
 </html>
