--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="Images/447973524_122114860244321359_951190063293816690_n.jpg" type="image/jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>html { scroll-behavior: smooth; }</style>
 </head>
 <body>
@@ -73,7 +74,7 @@
         </section>
         <section id="tours">
             <div class="container">
-                <h2>Our Signature Tours</h2>
+                <h2 class="section-title">Our Signature Tours</h2>
                 <div class="tour-list">
                     <div class="tour-card">
                         <img src="Images/monkey.jpg" alt="Jungle Expedition" class="tour-image">
@@ -84,7 +85,12 @@
                                 <span>Duration: 3-5 days</span>
                                 <span>Difficulty: Moderate</span>
                             </div>
-                            <a href="https://wa.me/59164111560?text=Hi,%20I'm%20interested%20in%20the%20Jungle%20Expedition%20tour." class="whatsapp-btn">Contact via WhatsApp</a>
+                            <br>
+                            <div class="tour-actions">
+                                <a href="https://wa.me/59164111560?text=Hi,%20I'm%20interested%20in%20the%20Jungle%20Expedition%20tour." class="whatsapp-btn" aria-label="Contact Jungle Expedition via WhatsApp">
+                                    <span class="wa-icon">📱</span> Contact via WhatsApp
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="tour-card">
@@ -96,7 +102,12 @@
                                 <span>Duration: 2-3 days</span>
                                 <span>Difficulty: Easy</span>
                             </div>
-                            <a href="https://wa.me/59164111560?text=Hi,%20I'm%20interested%20in%20the%20Pampas%20Safari%20tour." class="whatsapp-btn">Contact via WhatsApp</a>
+                            <br>
+                            <div class="tour-actions">
+                                <a href="https://wa.me/59164111560?text=Hi,%20I'm%20interested%20in%20the%20Pampas%20Safari%20tour." class="whatsapp-btn" aria-label="Contact Pampas Safari via WhatsApp">
+                                    <span class="wa-icon">📱</span> Contact via WhatsApp
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="tour-card">
@@ -108,7 +119,12 @@
                                 <span>Duration: Flexible</span>
                                 <span>Difficulty: Variable</span>
                             </div>
-                            <a href="https://wa.me/59164111560?text=Hi,%20I'm%20interested%20in%20the%20Combination%20Tour." class="whatsapp-btn">Contact via WhatsApp</a>
+                            <br>
+                            <div class="tour-actions">
+                                <a href="https://wa.me/59164111560?text=Hi,%20I'm%20interested%20in%20the%20Combination%20Tour." class="whatsapp-btn" aria-label="Contact Combination Tour via WhatsApp">
+                                    <span class="wa-icon">📱</span> Contact via WhatsApp
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,25 +132,25 @@
         </section>
         <section id="gallery">
             <div class="container">
-                <h2>Gallery</h2>
+                <h2 class="section-title">Gallery</h2>
                 <p class="section-subtitle">Capturing the beauty of the Amazon</p>
                 <div class="gallery-grid">
-                    <img src="Images/Accommodation.webp" alt="Accommodation room in the jungle" loading="lazy" width="400" height="200">
-                    <img src="Images/ant.jpg" alt="Amazon ant close up" loading="lazy" width="400" height="200">
-                    <img src="Images/boat view.jpg" alt="Boat view of the jungle" loading="lazy" width="400" height="200">
-                    <img src="Images/butterfly.jpg" alt="Butterfly in the Amazon" loading="lazy" width="400" height="200">
-                    <img src="Images/crocodile close up.jpg" alt="Crocodile close up" loading="lazy" width="400" height="200">
-                    <img src="Images/grasshopper.jpg" alt="Grasshopper in the jungle" loading="lazy" width="400" height="200">
-                    <img src="Images/Kingfisher.jpg" alt="Kingfisher bird" loading="lazy" width="400" height="200">
-                    <img src="Images/monkey 2.jpg" alt="Monkey in the trees" loading="lazy" width="400" height="200">
-                    <img src="Images/monkey.jpg" alt="Monkey face close up" loading="lazy" width="400" height="200">
-                    <img src="Images/Pampas boat.jpg" alt="Pampas boat tour" loading="lazy" width="400" height="200">
-                    <img src="Images/parrots kissing .jpg" alt="Parrots kissing" loading="lazy" width="400" height="200">
-                    <img src="Images/paw prints.jpg" alt="Animal paw prints" loading="lazy" width="400" height="200">
-                    <img src="Images/red flower.jpg" alt="Red flower in the jungle" loading="lazy" width="400" height="200">
-                    <img src="Images/spider.jpg" alt="Amazon spider" loading="lazy" width="400" height="200">
-                    <img src="Images/tarantula.jpg" alt="Tarantula in the Amazon" loading="lazy" width="400" height="200">
-                    <img src="Images/Toucan .webp" alt="Toucan bird" loading="lazy" width="400" height="200">
+                    <img src="Images/Accommodation.webp" alt="Accommodation room in the jungle" loading="lazy" width="400" height="250">
+                    <img src="Images/ant.jpg" alt="Amazon ant close up" loading="lazy" width="400" height="250">
+                    <img src="Images/boat view.jpg" alt="Boat view of the jungle" loading="lazy" width="400" height="250">
+                    <img src="Images/butterfly.jpg" alt="Butterfly in the Amazon" loading="lazy" width="400" height="250">
+                    <img src="Images/crocodile close up.jpg" alt="Crocodile close up" loading="lazy" width="400" height="250">
+                    <img src="Images/grasshopper.jpg" alt="Grasshopper in the jungle" loading="lazy" width="400" height="250">
+                    <img src="Images/Kingfisher.jpg" alt="Kingfisher bird" loading="lazy" width="400" height="250">
+                    <img src="Images/monkey 2.jpg" alt="Monkey in the trees" loading="lazy" width="400" height="250">
+                    <img src="Images/monkey.jpg" alt="Monkey face close up" loading="lazy" width="400" height="250">
+                    <img src="Images/Pampas boat.jpg" alt="Pampas boat tour" loading="lazy" width="400" height="250">
+                    <img src="Images/parrots kissing .jpg" alt="Parrots kissing" loading="lazy" width="400" height="250">
+                    <img src="Images/paw prints.jpg" alt="Animal paw prints" loading="lazy" width="400" height="250">
+                    <img src="Images/red flower.jpg" alt="Red flower in the jungle" loading="lazy" width="400" height="250">
+                    <img src="Images/spider.jpg" alt="Amazon spider" loading="lazy" width="400" height="250">
+                    <img src="Images/tarantula.jpg" alt="Tarantula in the Amazon" loading="lazy" width="400" height="250">
+                    <img src="Images/Toucan .webp" alt="Toucan bird" loading="lazy" width="400" height="250">
                 </div>
             </div>
         </section>
@@ -170,8 +186,8 @@
                                 <span class="stat-label">Happy Travelers</span>
                             </div>
                             <div class="stat">
-                                <span class="stat-number">10+</span>
-                                <span class="stat-label">Years Experience</span>
+                                <span class="stat-number">Top Rated</span>
+                                <span class="stat-label">Customer Satisfaction</span>
                             </div>
                             <div class="stat">
                                 <span class="stat-number">100%</span>
@@ -185,21 +201,24 @@
         </section>
         <section id="contact">
             <div class="container">
-                <h2>Contact Us</h2>
+                <h2 class="section-title">Contact Us</h2>
                 <div class="contact-content enhanced-contact">
                     <div class="contact-info">
                         <h3>Get in Touch</h3>
                         <p>Ready to embark on your Amazon adventure? Contact us today to plan your perfect trip.</p>
                         <div class="contact-details">
                             <p><strong>Location:</strong> Rurrenabaque, Bolivia</p>
-                            <p><strong>Email:</strong> <a href="mailto:info@jajatours.com">info@jajatours.com</a></p>
-                            <p><strong>Phone:</strong> <a href="tel:+591123456789">+591 123 456 789</a></p>
+                            <p><strong>Phone:</strong> <a href="tel:+59164111560">+59164111560</a></p>
                         </div>
                         <div class="social-media">
                             <h4>Follow Us</h4>
                             <div class="social-buttons">
-                                <a href="#" class="social-btn facebook" aria-label="Facebook">Facebook</a>
-                                <a href="#" class="social-btn instagram" aria-label="Instagram">Instagram</a>
+                                <a href="https://www.facebook.com/p/JAJA-TOURS-Rurrenabaque-61559640789599/" class="social-btn facebook" aria-label="Facebook" target="_blank" rel="noopener">
+                                    <span class="social-icon">&#xf09a;</span> Facebook
+                                </a>
+                                <a href="https://www.instagram.com/lateamjaja/" class="social-btn instagram" aria-label="Instagram" target="_blank" rel="noopener">
+                                    <span class="social-icon">&#xf16d;</span> Instagram
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -233,8 +252,12 @@
                 <div class="footer-section">
                     <h4>Follow Us</h4>
                     <div class="social-links">
-                        <a href="#" title="Instagram">Instagram</a>
-                        <a href="#" title="Facebook">Facebook</a>
+                        <a href="https://www.instagram.com/lateamjaja/" title="Instagram" target="_blank" rel="noopener">
+                            <span class="social-icon">&#xf16d;</span> Instagram
+                        </a>
+                        <a href="https://www.facebook.com/p/JAJA-TOURS-Rurrenabaque-61559640789599/" title="Facebook" target="_blank" rel="noopener">
+                            <span class="social-icon">&#xf09a;</span> Facebook
+                        </a>
                     </div>
                 </div>
             </div>
