Footer and link color improvements

--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <img src="Images/447973524_122114860244321359_951190063293816690_n.jpg" alt="Jaja Tours Logo" class="footer-logo">
-                    <p>Your gateway to Bolivia's Amazon wilderness.</p>
+                    <p>Your gateway to Bolivia's Amazon wilderness.<br>
+                    Discover breathtaking wildlife, authentic jungle experiences, and unforgettable adventures with our expert local guides.<br>
+                    We are committed to sustainable tourism and creating memories that last a lifetime.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
@@ -263,6 +265,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Jaja Tours, Rurrenabaque, Bolivia. Contact: +59164111560. All rights reserved.</p>
+                <p>Website designed with ❤️ by <a href="https://nomadicwebstudio.netlify.app" target="_blank" rel="noopener" style="color: var(--secondary); text-decoration: underline; font-weight: 500;">Nomadic Web Studios</a></p>
             </div>
         </div>
     </footer>
