Add alternative phone number to contact section, update Instagram links, enhance features section, and improve footer layout and spacing

--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
                     <div class="feature-card">
                         <div class="feature-icon">🌿</div>
                         <h3>Sustainable Adventures</h3>
-                        <p>We prioritize eco-friendly practices to protect the Amazon's biodiversity.</p>
+                        <p>We work hand-in-hand with the local community to support sustainable tourism, protect the environment, and ensure that our tours directly benefit the people and nature of Rurrenabaque.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">👥</div>
                         <h3>Expert Guides</h3>
-                        <p>Our experienced local guides share deep knowledge of the jungle and wildlife.</p>
+                        <p>Our guides are bilingual, certified professionals, and associates in Agnatur, endorsed at the institutional level by Feboguit. They share deep knowledge of the jungle and wildlife, ensuring a safe and enriching experience for every guest.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">⭐</div>
                         <h3>Premium Experience</h3>
                         <p>Small groups, personalized service, and unforgettable memories guaranteed.</p>
+                        <p>Enjoy seamless logistics, comfortable accommodations, and curated itineraries designed for your interests.</p>
                     </div>
                 </div>
             </div>
@@ -209,6 +210,7 @@
                         <div class="contact-details">
                             <p><strong>Location:</strong> Rurrenabaque, Bolivia</p>
                             <p><strong>Phone:</strong> <a href="tel:+59164111560">+59164111560</a></p>
+                            <p><strong>Alternative Phone:</strong> <a href="tel:+59167664349">+59167664349</a></p>
                         </div>
                         <div class="social-media">
                             <h4>Follow Us</h4>
@@ -216,7 +218,7 @@
                                 <a href="https://www.facebook.com/p/JAJA-TOURS-Rurrenabaque-61559640789599/" class="social-btn facebook" aria-label="Facebook" target="_blank" rel="noopener">
                                     <span class="social-icon">&#xf09a;</span> Facebook
                                 </a>
-                                <a href="https://www.instagram.com/lateamjaja/" class="social-btn instagram" aria-label="Instagram" target="_blank" rel="noopener">
+                                <a href="https://www.instagram.com/jaja_tours_rurre?igsh=bXZ5dXF2N3dldGps" class="social-btn instagram" aria-label="Instagram" target="_blank" rel="noopener">
                                     <span class="social-icon">&#xf16d;</span> Instagram
                                 </a>
                             </div>
@@ -254,7 +256,7 @@
                 <div class="footer-section">
                     <h4>Follow Us</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/lateamjaja/" title="Instagram" target="_blank" rel="noopener">
+                        <a href="https://www.instagram.com/jaja_tours_rurre?igsh=bXZ5dXF2N3dldGps" title="Instagram" target="_blank" rel="noopener">
                             <span class="social-icon">&#xf16d;</span> Instagram
                         </a>
                         <a href="https://www.facebook.com/p/JAJA-TOURS-Rurrenabaque-61559640789599/" title="Facebook" target="_blank" rel="noopener">
